# mock-grants-data

./: .gitignore  README.md  grant-application-schema.md  grant-application-schemas.md  pyproject.toml
core/: generate.py  grant-application-schemas.md
core/data_inserts/: application_inserts.py  grant_inserts.py  report_inserts.py
core/output_data/: applications.csv  dagp_application_details.csv  dagp_report_details.csv  fplagp_application_details.csv  fplagp_report_details.csv  grants.csv  reports.csv  rgp_application_details.csv  rgp_report_details.csv  rppgp_application_details.csv  rppgp_report_details.csv
core/table_defs/: application_tables.py  grant_tables.py  report_tables.py
